--- a/src/inline-nav-bar.css
+++ b/src/inline-nav-bar.css
@@ -39,8 +39,9 @@ ul.inline {
         height: 100%;
 
         flex-direction: column;
+        flex-wrap: nowrap;
 
-        background-color: white;
+        background-color: #F3F4F6;
         padding: 1rem 2rem;
 
         transition: 0.2s ease-in;
@@ -55,6 +56,9 @@ ul.inline {
 
     li.inline {
         cursor: pointer;
+        margin-top: 16px;
+        margin-bottom: 16px;
+        font-size: 24px;
     }
     
     .burger {
